5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1582_996.log
== TEST (2019-03-29 15:29:21) 
-- CODE:
print("* o o * ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
* o o *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:33:28) 
-- CODE:
print("* o o *")
print("*  ")
print(" ")
print(" ")
-- OUTPUT:
* o o *
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:33:40) 
-- CODE:
print("* o o *")
print("*  ")
print(" ")
print(" ")
-- EXECUTION TIME:
0.195951
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* o o *
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:35:25) 
-- CODE:
print("*")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:35:29) 
-- CODE:
print("*")
print("* ^ *")
print(" ")
print(" ")
-- EXECUTION TIME:
0.126961
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*
* ^ *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:35:48) 
-- CODE:
print("****")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
****
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:36:53) 
-- CODE:
print("* 0 0 *")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
* 0 0 *
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:39:23) 
-- CODE:
print("* o o *")
print("* ^ *")
print("* --- *")
print(" **** ")
-- OUTPUT:
* o o *
* ^ *
* --- *
 ****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:39:26) 
-- CODE:
print("* o o *")
print("* ^ *")
print("* --- *")
print(" **** ")
-- EXECUTION TIME:
0.152185
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* o o *
* ^ *
* --- *
 ****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:40:46) 
-- CODE:
        *****
print("*o o*")
print("* ^ *")
print("* ---*")
print("****")
-- ERROR:
File "XXXX", line 1
    *****
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:40:49) 
-- CODE:
        *****
print("*o o*")
print("* ^ *")
print("* ---*")
print("****")
-- EXECUTION TIME:
0.2015
-- ERROR:
  File "/home/codebench/codes/1582/996/main.py", line 1
    *****
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:41:24) 
-- CODE:
print("*o o*")
print("* ^ *")
print("* ---*")
print("****")
-- OUTPUT:
*o o*
* ^ *
* ---*
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:41:28) 
-- CODE:
print("*o o*")
print("* ^ *")
print("* ---*")
print("****")
-- EXECUTION TIME:
0.152569
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*o o*
* ^ *
* ---*
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:41:51) 
-- CODE:
print("* o o*")
print("* ^ *")
print("* ---*")
print("****")
-- OUTPUT:
* o o*
* ^ *
* ---*
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:42:05) 
-- CODE:
print("* o o*")
print("* ^ *")
print("* --- *")
print("****")
-- OUTPUT:
* o o*
* ^ *
* --- *
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:42:40) 
-- CODE:
print("* o o*")
print("* ^ *")
print("* --- *")
print("****")
-- EXECUTION TIME:
0.132379
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* o o*
* ^ *
* --- *
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:42:41) 
-- CODE:
print("* o o*")
print("* ^ *")
print("* --- *")
print("****")
-- EXECUTION TIME:
0.180603
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* o o*
* ^ *
* --- *
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:42:52) 
-- CODE:
print("* o o *")
print("* ^ *")
print("* --- *")
print("****")
-- OUTPUT:
* o o *
* ^ *
* --- *
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:42:55) 
-- CODE:
print("* o o *")
print("* ^ *")
print("* --- *")
print("****")
-- EXECUTION TIME:
0.127457
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* o o *
* ^ *
* --- *
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:43:15) 
-- CODE:
print("*o o*")
print("* ^ *")
print("* --- *")
print("****")
-- OUTPUT:
*o o*
* ^ *
* --- *
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:43:17) 
-- CODE:
print("*o o*")
print("* ^ *")
print("* --- *")
print("****")
-- EXECUTION TIME:
0.161651
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*o o*
* ^ *
* --- *
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:43:28) 
-- CODE:
print("*o o*")
print("* ^ *")
print("*---*")
print("****")
-- OUTPUT:
*o o*
* ^ *
*---*
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:43:33) 
-- CODE:
print("*o o*")
print("* ^ *")
print("*---*")
print("****")
-- EXECUTION TIME:
0.142129
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*o o*
* ^ *
*---*
****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:47:20) 
-- CODE:
print("*****")
print("*o o*")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*o o*
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:47:24) 
-- CODE:
print("*****")
print("*o o*")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.219943
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
*o o*
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:47:29) 
-- CODE:
print("*****")
print("*o o*")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*o o*
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:56:19) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:56:29) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:57:23) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:01:43) 
-- CODE:
print(*****)
print(* o o *)
print(* ^ *)
print("")
print(" ")
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:02:43) 
-- CODE:
print(*****)
print(* o o*)
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:02:46) 
-- CODE:
print(*****)
print(* o o*)
print(* ^ *)
print(*---*)
print(*****)
-- EXECUTION TIME:
0.138981
-- ERROR:
  File "/home/codebench/codes/1582/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:04:58) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:10:01) 
-- CODE:
print(*****)
print(*o o*)
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:10:45) 
-- CODE:
print(*****)
print(*o o*)
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:10:52) 
-- CODE:
print(*****)
print(*o o*)
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:10:58) 
-- CODE:
print(*****)
print(*o o*)
print(* ^ *)
print(*---*)
print(*****)
-- EXECUTION TIME:
0.137673
-- ERROR:
  File "/home/codebench/codes/1582/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:11:02) 
-- CODE:
print(*****)
print(*o o*)
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:11:14) 
-- CODE:
print(****)
print(*o o*)
print(* ^ *)
print(*---*)
print(****)
-- ERROR:
File "XXXX", line 1
    print(****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:42:02) 
-- CODE:
print   ("****")
print ("(* o o *)")
print  ("* ^ * ")
print  ("* --- *")
print   ("*****")
-- OUTPUT:
****
(* o o *)
* ^ * 
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:46:36) 
-- CODE:
print   ("****")
print ("(* o o *)")
print  ("* ^ * ")
print  ("* --- *")
print   ("*****")
-- OUTPUT:
****
(* o o *)
* ^ * 
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:54:02) 
-- CODE:
print  ("*****")
print ("(*o o*)")
print  ("* ^ *")  
print  ("*---*") 
print   ("*****")
-- OUTPUT:
*****
(*o o*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:57:42) 
-- CODE:
print  ("*****")
print ("(*o o*)")
print  ("* ^ *")  
print  ("*---*") 
print  ("*****")
-- OUTPUT:
*****
(*o o*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:58:01) 
-- CODE:
print(  "*****")
print( "(*o o*)")
print(  "* ^ *")  
print(  "*---*") 
print(  "*****")
-- OUTPUT:
*****
(*o o*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:00:37) 
-- CODE:
print(  "*****")
print( "(*o o*)")
print(  "* ^ *")  
print(  "*---*") 
print(  "*****")
-- EXECUTION TIME:
0.152935
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*o o*)
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:04:58) 
-- CODE:
print(  " ***** ")
print( "(* o o *)" )
print( " *  ^  * "  )  
print( " * --- * "  ) 
print(  " ***** " )
-- OUTPUT:
***** 
(* o o *)
 *  ^  * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:06:59) 
-- CODE:
print  ( "*****" )  
print ("(* o o *)")
print  ("* ^ *")
print  ("* --- *")
print   ("*****")
-- OUTPUT:
*****
(* o o *)
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:07:39) 
-- CODE:
print  ( "*****" )  
print ("(* o o *)")
print  ("* ^ *")
print  ("* ---*")
print   ("*****")
-- EXECUTION TIME:
0.144299
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
* ---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:09:15) 
-- CODE:
print( "  *****" )  
print(" (* o o *) ")
print("  *  ^  *")
print("  * --- *")
print ("  *****")
-- OUTPUT:
*****
 (* o o *) 
  *  ^  *
  * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:09:31) 
-- CODE:
print( "  *****" )  
print(" (* o o *) ")
print("  *  ^  *")
print("  * --- *")
print ("  *****")
-- EXECUTION TIME:
0.127724
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *) 
  *  ^  *
  * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
